--- a/assets/icons/svg/fontcustom/fontcustom-preview.html
+++ b/assets/icons/svg/fontcustom/fontcustom-preview.html
@@ -141,11 +141,11 @@
 
       @font-face {
   font-family: "fontcustom";
-  src: url("./fontcustom_1bdd1fe34d4892ef8fa376c54942299a.eot");
-  src: url("./fontcustom_1bdd1fe34d4892ef8fa376c54942299a.eot?#iefix") format("embedded-opentype"),
-       url("./fontcustom_1bdd1fe34d4892ef8fa376c54942299a.woff") format("woff"),
-       url("./fontcustom_1bdd1fe34d4892ef8fa376c54942299a.ttf") format("truetype"),
-       url("./fontcustom_1bdd1fe34d4892ef8fa376c54942299a.svg#fontcustom") format("svg");
+  src: url("./fontcustom_ca1a2a73dbcb3b92c33348e835ee191f.eot");
+  src: url("./fontcustom_ca1a2a73dbcb3b92c33348e835ee191f.eot?#iefix") format("embedded-opentype"),
+       url("./fontcustom_ca1a2a73dbcb3b92c33348e835ee191f.woff") format("woff"),
+       url("./fontcustom_ca1a2a73dbcb3b92c33348e835ee191f.ttf") format("truetype"),
+       url("./fontcustom_ca1a2a73dbcb3b92c33348e835ee191f.svg#fontcustom") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -153,7 +153,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: "fontcustom";
-    src: url("./fontcustom_1bdd1fe34d4892ef8fa376c54942299a.svg#fontcustom") format("svg");
+    src: url("./fontcustom_ca1a2a73dbcb3b92c33348e835ee191f.svg#fontcustom") format("svg");
   }
 }
 
@@ -165,6 +165,7 @@
 .icon-envelop:before,
 .icon-facebook:before,
 .icon-google:before,
+.icon-menu:before,
 .icon-phone:before,
 .icon-star:before,
 .icon-tripadvisor:before,
@@ -189,6 +190,7 @@
 .icon-envelop:before { content: "\f105"; }
 .icon-facebook:before { content: "\f106"; }
 .icon-google:before { content: "\f10c"; }
+.icon-menu:before { content: "\f10d"; }
 .icon-phone:before { content: "\f107"; }
 .icon-star:before { content: "\f108"; }
 .icon-tripadvisor:before { content: "\f109"; }
@@ -209,7 +211,7 @@
   <body class="characters-off">
     <div id="page" class="container">
       <header>
-        <h1>fontcustom contains 10 glyphs:</h1>
+        <h1>fontcustom contains 11 glyphs:</h1>
         <a onclick="toggleCharacters(); return false;" href="#">Toggle Preview Characters</a>
       </header>
 
@@ -276,6 +278,19 @@
         <div class="usage">
           <input class="class" type="text" readonly="readonly" onClick="this.select();" value=".icon-google" />
           <input class="point" type="text" readonly="readonly" onClick="this.select();" value="&amp;#xf10c;" />
+        </div>
+      </div>
+      
+      <div class="glyph">
+        <div class="preview-glyphs">
+          <span class="step size-12"><span class="letters">Pp</span><i id="icon-menu" class="icon-menu"></i></span><span class="step size-14"><span class="letters">Pp</span><i id="icon-menu" class="icon-menu"></i></span><span class="step size-16"><span class="letters">Pp</span><i id="icon-menu" class="icon-menu"></i></span><span class="step size-18"><span class="letters">Pp</span><i id="icon-menu" class="icon-menu"></i></span><span class="step size-21"><span class="letters">Pp</span><i id="icon-menu" class="icon-menu"></i></span><span class="step size-24"><span class="letters">Pp</span><i id="icon-menu" class="icon-menu"></i></span><span class="step size-36"><span class="letters">Pp</span><i id="icon-menu" class="icon-menu"></i></span><span class="step size-48"><span class="letters">Pp</span><i id="icon-menu" class="icon-menu"></i></span><span class="step size-60"><span class="letters">Pp</span><i id="icon-menu" class="icon-menu"></i></span><span class="step size-72"><span class="letters">Pp</span><i id="icon-menu" class="icon-menu"></i></span>
+        </div>
+        <div class="preview-scale">
+          <span class="step">12</span><span class="step">14</span><span class="step">16</span><span class="step">18</span><span class="step">21</span><span class="step">24</span><span class="step">36</span><span class="step">48</span><span class="step">60</span><span class="step">72</span>
+        </div>
+        <div class="usage">
+          <input class="class" type="text" readonly="readonly" onClick="this.select();" value=".icon-menu" />
+          <input class="point" type="text" readonly="readonly" onClick="this.select();" value="&amp;#xf10d;" />
         </div>
       </div>
       
